--- a/Querying Tweets.ipynb
+++ b/Querying Tweets.ipynb
@@ -121,7 +121,7 @@
     "# save output as df \n",
     "\n",
     "list_tweets = [list(elem.values()) for elem in list_of_encoded_tweets]\n",
-    "list_columns = list(list_of_json[0].keys())\n",
+    "list_columns = list(list_of_encoded_tweets[0].keys())\n",
     "df = pd.DataFrame(list_tweets, columns = list_columns)\n",
     "\n",
     "print(df.head())\n"
@@ -144,7 +144,7 @@
    "source": [
     "# dataframe to csv file\n",
     "\n",
-    "df.to_csv(r'cibc_tweets.csv', sep='\\t', index=False)"
+    "df.to_csv(r'cibc_tweets.csv', index=False)"
    ]
   },
   {
