--- a/Querying Tweets.ipynb
+++ b/Querying Tweets.ipynb
@@ -62,12 +62,14 @@
     "                              poolsize = args.poolsize, lang = args.lang)\n",
     "'''\n",
     "\n",
-    "list_of_tweets = query_tweets(\"#cibc\", limit = None, begindate = begindate, enddate = enddate, poolsize = 10)\n",
+    "list_of_tweets = query_tweets(\"#cibc\", limit = None, begindate = begindate, enddate = enddate, poolsize = 10, lang='en')\n",
     "list_of_encoded_tweets = [] # create empty list to save multiple tweets which is type of dictionary\n",
     "\n",
     "for tweets in list_of_tweets:\n",
     "    tweets.timestamp = dt.datetime.strftime(tweets.timestamp, '%Y-%m-%d %H:%M:%S')\n",
     "    list_of_encoded_tweets.append(vars(tweets))\n",
+    "\n",
+    "print('--Querying Ended--')\n",
     "\n"
    ]
   },
